--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack serve --config ./webpack.config.js --mode development",
     "test": "echo \"No test specified\" && exit 0",
     "build": "webpack --mode production",
-    "deploy": "gh-pages -d /dist",
+    "deploy": "gh-pages -d ./dist",
     "publish-demo": "npm run build && npm run deploy"
   },
   "keywords": [],
