--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minimal-react-webpack-babel-setup",
+  "name": "hippocampus-lite",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
