--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "prettier"],
   "rules": {
+    "react/prop-types": "off",
     "prettier/prettier": ["error", {}, { "usePrettierrc": true }]
   }
 }
