--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config ./webpack.config.js --mode development",
+    "lint": "eslint src --ext .js",
+    "lint:fix": "npm run lint -- --fix",
     "test": "echo \"No test specified\" && exit 0",
     "build": "webpack --mode production",
     "deploy": "gh-pages -d ./dist",
